Transitioning to dune; unit tests. Not working; fails during linking? Ocamlbuild still works just fine for unit test compilation.  Changes to be committed: 	deleted:    src/lib/.merlin 	modified:   src/test/bimap_tests.ml 	modified:   src/test/dune

--- a/src/test/dune
+++ b/src/test/dune
@@ -1,7 +1,8 @@
 (alias
-   (name bimap_tests)
+   (name runtest)
    (action (run ./bimap_tests.exe))
 )
-;(tests
-;  (names bimap_tests)
-;)
+(executable
+  (name bimap_tests)
+  (libraries core oUnit bimap)
+)
