Changes to be committed: 	modified:   bimap.opam 	modified:   dune-project 	modified:   src/lib/.merlin

--- a/bimap.opam
+++ b/bimap.opam
@@ -1,4 +1,4 @@
-opam-version: "2.0.0"
+opam-version: "2.0"
 name: "bimap"
 version: "0.1"
 maintainer: "papatangonyc@gmail.com"
@@ -7,19 +7,21 @@ license: "GPLv3"
 homepage: "https://github.com/pat227/bimap.git"
 doc: "None"
 bug-reports: "papatangonyc@gmail.com"
-dev-repo: "~/libraries/ocaml_libs/bimap/.git"
+dev-repo: "git+https://github.com/pat227/bimap.git"
 build: [
   ["dune" "subst"]{pinned}
   ["dune" "build" "-p" name "-j" jobs]
 ]
-remove: []
-build-test: ["dune" "runtests" "--profile=release"]
+#remove: []
+run-test: ["dune" "runtests" "--profile=release"]
 #build-doc: [
 #  make "doc"
 #]
 depends: [
+  "ocaml" {>= "4.06.0"}
   "core" {>= "v0.11.3"}
   "ocamlfind" {>= "1.8"}
   "dune" {>= "1.2.1"}
+  "ounit" {>= "2.0.8"}
 ]
-available: [ ocaml-version >= "4.04.1" & opam-version >= "2.0.0" ]
+#available: [ ocaml-version >= "4.06.0" & opam-version >= "2.0" ]
