Finally found the bug and fixed it; forgot that when removing a key, order matters since the key might be the same key being set. Also preparing to release as a package for others to use.  On branch master  Changes to be committed: 	modified:   .gitignore 	modified:   bimap.opam 	modified:   dune-project 	deleted:    src/lib/.merlin 	modified:   src/lib/bimap_multi_module.ml 	modified:   src/lib/bimap_multi_module.mli 	modified:   src/lib/bimap_single_class.ml 	modified:   src/lib/bimap_single_module.ml 	modified:   src/lib/bimap_single_module.mli 	deleted:    src/test/.merlin 	modified:   src/test/bimap_tests.ml 	modified:   src/test/dune

--- a/src/test/dune
+++ b/src/test/dune
@@ -1,6 +1,6 @@
-(alias
-   (name runtest)
-   (action (run ./bimap_tests.exe))
+(rule
+  (alias runtest)
+  (action (run ./bimap_tests.exe))
 )
 (executable
   (name bimap_tests)
