--- a/bimap.opam
+++ b/bimap.opam
@@ -12,9 +12,8 @@ bug-reports: "https://github.com/pat227/bimap.git/issues"
 depends: [
   "ocaml" {>= "4.06.0"}
   "core" {>= "v0.11.3"}
-  "ocamlfind" {>= "1.8"}
   "dune" {>= "2.0"}
-  "oUnit" {>= "2.08"}
+  "ounit" {>= "2.08"}
 ]
 build: [
   ["dune" "subst"] {pinned}
