--- a/bimap.opam
+++ b/bimap.opam
@@ -13,7 +13,7 @@ depends: [
   "ocaml" {>= "4.06.0"}
   "core" {>= "v0.11.3"}
   "dune" {>= "2.0"}
-  "oUnit" {>= "2.08"}
+  "ounit" {>= "2.2.2"}
 ]
 build: [
   ["dune" "subst"] {pinned}
