--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,1 @@
-*.cmi
-*.cmo
-*.o
-*.cmx
-*~
-*.txt
-*realrun*
-*dryrun*
-*.opt
-*.a
-*.cmxa
-*.omc
-*.lock
-*omakedb*
-build
-*.key
-.merlin
+_build
