--- a/bimap.opam
+++ b/bimap.opam
@@ -7,8 +7,8 @@ description:
 maintainer: ["papatangonyc@gmail.com"]
 authors: ["papatangonyc@gmail.com"]
 license: "GPLv3"
-homepage: "https://github.com/pat227/bimap.git"
-bug-reports: "https://github.com/pat227/bimap.git/issues"
+homepage: "https://github.com/pat227/bimap"
+bug-reports: "https://github.com/pat227/bimap/issues"
 depends: [
   "ocaml" {>= "4.06.0"}
   "core" {>= "v0.11.3"}
@@ -29,4 +29,4 @@ build: [
     "@doc" {with-doc}
   ]
 ]
-dev-repo: "git+https://github.com/pat227/bimap.git.git"
+dev-repo: "git+https://github.com/pat227/bimap.git"
